--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 style="text-align: center;">CHESS</h1>
 <div id="board" class="board"></div>
+
+
+
 <div class="info">
 
     Search depth:
